--- a/style.css
+++ b/style.css
@@ -39,8 +39,13 @@ body {
 .unit {
   flex: 1;
   border: 1px solid grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 70px;
+  color: #708090;
 }
 
 .unit:hover {
-  background-color: #f5ca82;
+  background-color: #dcdcdc;
 }
