--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ body {
 .top-banner {
   height: 100px;
   display: flex;
-  background-color: grey;
+  background-color: #99a3a4;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+  font-size: 40px;
 }
 
 .game-container {
@@ -48,4 +49,17 @@ body {
 
 .unit:hover {
   background-color: #dcdcdc;
+}
+
+#current-player {
+  font-size: 30px;
+}
+
+#restart-btn {
+  font-size: 30px;
+  padding: 10px 20px;
+  border: 3px solid black;
+  border-radius: 7px;
+  background-color: #ff5733;
+  color: black;
 }
