--- a/style.css
+++ b/style.css
@@ -53,6 +53,56 @@ body {
 
 #current-player {
   font-size: 30px;
+  animation: fadeIn linear 0.8s;
+  -webkit-animation: fadeIn linear 0.8s;
+  -moz-animation: fadeIn linear 0.8s;
+  -o-animation: fadeIn linear 0.8s;
+  -ms-animation: fadeIn linear 0.8s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 #restart-btn {
